@@ -1,3 +1,8 @@
+20040830
+ - (dtucker) [session.c openbsd-compat/bsd-cygwin_util.{c,h}] Bug #915: only
+   copy required environment variables on Cygwin.  Patch from vinschen at
+   redhat.com, ok djm@
+
 20040829
  - (dtucker) [openbsd-compat/getrrsetbyname.c] Prevent getrrsetbyname from
    failing with NOMEMORY if no sigs are returned and malloc(0) returns NULL.
@@ -1707,4 +1712,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3536 2004/08/29 11:43:33 dtucker Exp $
+$Id: ChangeLog,v 1.3537 2004/08/30 10:42:08 dtucker Exp $
